<resources>
    <string name="app_name">Morphia</string>


    <string name="camera_face_swap">Camera Face Swap</string>
    <string name="face_not_found">Face Not Found</string>
    <string name="choose_image">Choose Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="permission_needs">Morphia needs following permissions to continue</string>
    <string name="allow_permission_settings">Please allow following permissions in settings</string>
    <string name="please_allow_given_permission">Please allow given permission</string>
    <string name="image_picker">Image Picker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="convert_to_speech">Convert To Speech</string>
    <string name="enter_text_to_speech">enter text to speech</string>
    <string name="enter_text">Enter Text</string>
    <string name="record_audio">Record Audio</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="voice_swap">Voice Swap</string>
    <string name="chipmunk">Chipmunk</string>
    <string name="robot">Robot</string>
    <string name="cave">Cave</string>
    <string name="radio">Radio</string>
    <string name="effects">Effects</string>
    <string name="cannot_apply_effect">Something went Wrong\nCannot Apply Effects</string>
    <string name="please_record_audio">Please record audio</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dont_have_account">Don\'t have an account? Create Account</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_email">Enter Your E-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_by">OR LOGIN BY</string>
    <string name="already_have_account">Already have an account? SIGN IN</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="organization">Organization</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="something_went_wrong">Something Went Wrong</string>
</resources>