<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.DashBoardFragment">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCameraFaceSwap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_face_swap"
        app:layout_constraintBottom_toTopOf="@id/btnTextToSpeech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTextToSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_to_speech"
        app:layout_constraintBottom_toTopOf="@id/btnVoiceClone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCameraFaceSwap" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVoiceClone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voice_swap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTextToSpeech" />


</androidx.constraintlayout.widget.ConstraintLayout>