<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl30"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_minus30sdp"
        android:background="@drawable/bottom_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl30">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/createAccount"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlEmail"
                    style="@style/TextInputLayout.Border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/e_mail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teEmail"
                        style="@style/TextView.12x.PoppinsMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlPassword"
                    style="@style/TextInputLayout.Border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tlEmail"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tePassword"
                        style="@style/TextView.12x.PoppinsMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/TextView.12x.PoppinsRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/forgot_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tlPassword" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignIn"
                    style="@style/TextView.12x.PoppinsMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_btn"
                    android:elevation="@dimen/_5sdp"
                    android:text="@string/sign_in"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOr"
                    style="@style/TextView.12x.PoppinsRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/or_login_by"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnSignIn" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivGoogleSignIn"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_icon_round"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_google"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvOr"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/createAccount"
            style="@style/TextView.10x.PoppinsRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/dont_have_account" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>