<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context="com.morphia.app.user.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl30"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_minus30sdp"
        android:background="@drawable/bottom_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl30">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/createAccount"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp">


                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_profile"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:src="@drawable/profile_placeholder_round"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivAddProfile"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_image_icon_add"
                        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                        app:layout_constraintEnd_toEndOf="@id/iv_profile" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlFullName"
                    style="@style/TextInputLayout.Border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/full_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teFullName"
                        style="@style/TextView.12x.PoppinsMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlEmail"
                    style="@style/TextInputLayout.Border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/e_mail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teEmail"
                        style="@style/TextView.12x.PoppinsMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlOrganization"
                    style="@style/TextInputLayout.Border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/organization"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tlEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teOrganization"
                        style="@style/TextView.12x.PoppinsMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlPassword"
                    style="@style/TextInputLayout.Border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tlEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tePassword"
                        style="@style/TextView.12x.PoppinsMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlConfirmPassword"
                    style="@style/TextInputLayout.Border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/confirm_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tlEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teConfirmPassword"
                        style="@style/TextView.12x.PoppinsMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCreateAccount"
                    style="@style/TextView.12x.PoppinsMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/bg_btn"
                    android:elevation="@dimen/_5sdp"
                    android:text="@string/create_account"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/tlPassword" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/createAccount"
            style="@style/TextView.10x.PoppinsRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/already_have_account" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>