<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_dialog"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:gravity="center"
            android:padding="12dp"
            android:text="@string/choose_image"
            android:textColor="@color/colorBgQr"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="?actionBarItemBackground"
            android:padding="8dp"
            android:src="@drawable/ic_close_"
            app:tint="@color/colorBgQr" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/linear_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_select_camera" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"

                android:gravity="center"
                android:text="@string/camera"
                android:textColor="@color/colorBgQr"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_gallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_select_gallery" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/gallery"
                android:textColor="@color/colorBgQr"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>